--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-location": "^3.7.4",
+    "heroicons": "^2.0.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
