--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.3",
     "@tanstack/react-location": "^3.7.4",
     "heroicons": "^2.0.12",
     "react": "^18.2.0",
