--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.3",
+    "@heroicons/react": "^2.0.12",
     "@tanstack/react-location": "^3.7.4",
-    "heroicons": "^2.0.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
