--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "@tanstack/react-location": "^3.7.4",
+    "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
