--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tanstack/react-location": "^3.7.4",
     "@tanstack/react-query": "^4.14.3",
     "axios": "^1.1.3",
+    "flowbite": "^1.6.3",
+    "flowbite-react": "^0.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
